--- a/public/css/light.css
+++ b/public/css/light.css
@@ -1,3 +1,11 @@
+.top_panel{
+    display: flex;
+    justify-content: space-around;
+}
+.theme{
+    margin: 10px;
+    display: flex;
+}
 .green{
     background-color: rgb(83, 219, 83);
     margin: 0 5px;
