--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -4,13 +4,17 @@
     color: #fff;
 }
 body{
-    background-color: rgb(60, 51, 51) !important;
+    background-color: rgb(99, 125, 99) !important;
 }
 label {
     color: #fff !important;
 }
+h3{
+    color: #fff !important;
+}
 input{
-    background-color: rgb(100, 88, 88) !important;
+    background-color: rgb(151, 167, 151) !important;
+    color: #fff !important;
 }
 .green{
     background-color: rgb(17, 99, 17);
@@ -23,4 +27,10 @@ input{
 .red{
     background-color: rgb(121, 23, 23);
     margin: 0 5px;
+}
+.color__labels{
+    color:white
+}
+.color__deadline{
+    color:white
 }
