--- a/public/css/light.css
+++ b/public/css/light.css
@@ -1,3 +1,9 @@
+body{
+    background-color: rgb(204, 239, 204) !important;   
+}
+input{
+    background-color: rgb(228, 247, 228) !important;  
+}
 .top_panel{
     display: flex;
     justify-content: space-around;
